Add Jobs page and Telegram apply flow

--- a/env.example
+++ b/env.example
@@ -8,3 +8,7 @@ POSTGRES_PASSWORD=postgres
 
 # Domain Configuration
 DOMAIN=tondev.foundation
+
+# Telegram Bot (job applications)
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
