--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=5000
+      - HOST=0.0.0.0
       - DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@db:5432/tondev}
     depends_on:
       - db
