--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - NODE_ENV=production
       - PORT=5000
       - HOST=0.0.0.0
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
       - DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@db:5432/tondev}
     depends_on:
       - db
